# rustime

./: .gitignore  Cargo.toml
.cursor/rules/: no-eszett.mdc  no-gedankenstrich.mdc
crates/rustime-core/: Cargo.toml
crates/rustime-core/src/: lib.rs  window_context.rs
crates/rustime-db/: Cargo.toml
crates/rustime-db/src/: activity_repo.rs  dwell.rs  error.rs  lib.rs  project_repo.rs  schema.rs  seed.rs
crates/rustime-tracking/: Cargo.toml
crates/rustime-tracking/src/: error.rs  lib.rs  state.rs  tracker.rs
docs/: TEST-DATENBANK.md
docs/rustime-lernmaterial/: 01-state-arten.md  02-tauri-bridge.md  03-daten-und-aggregation.md  04-architektur-schichten.md  README.md
docs/rustime-lernmaterial/examples/: README.md  jsx.d.ts  react-state.tsx  stubs.d.ts  tauri-command.rs  tauri-event.tsx  tracking-state.rs  tsconfig.json
tauri-app/: package-lock.json  package.json
tauri-app/src/: App.css  App.tsx  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: error.rs  lib.rs
tauri-app/src-tauri/src/commands/: export.rs  mod.rs  projects.rs  report.rs  settings.rs  stats.rs  tracking.rs
tauri-app/src-tauri/src/dto/: activity.rs  export.rs  mod.rs  project.rs  stats.rs
tauri-app/src/components/: AccountPanel.tsx  ActivitiesTable.tsx  AlertDialog.tsx  AppOverviewDialog.tsx  AppShell.module.css  AppSidebar.module.css  AppSidebar.tsx  AppTabs.module.css  ConfirmDialog.tsx  CreateProjectDialog.tsx  DailyReportView.tsx  ExportMenu.module.css  (+9 more)
testdata/: README.md
tools/perf/: run-24h-test.ps1
tools/seed-database/: Cargo.toml
(+47 files in other folders)
