[workspace]
resolver = "2"
members = [
    "tauri-app/src-tauri",
    "crates/rustime-core",
    "crates/rustime-tracking",
    "crates/rustime-db",

]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
